WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
79158
[chromium] Fix image drag out on Chromium
https://bugs.webkit.org/show_bug.cgi?id=79158
Summary
[chromium] Fix image drag out on Chromium
Daniel Cheng
Reported
2012-02-21 15:49:34 PST
[chromium] Fix image drag out on Chromium
Attachments
Patch
(1.35 KB, patch)
2012-02-21 15:50 PST
,
Daniel Cheng
no flags
Details
Formatted Diff
Diff
Patch
(4.85 KB, patch)
2012-02-21 16:31 PST
,
Daniel Cheng
tony
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Cheng
Comment 1
2012-02-21 15:50:01 PST
Created
attachment 128064
[details]
Patch
Daniel Cheng
Comment 2
2012-02-21 16:31:22 PST
Created
attachment 128080
[details]
Patch
Tony Chang
Comment 3
2012-02-21 16:38:47 PST
Comment on
attachment 128080
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=128080&action=review
> Source/WebKit/chromium/ChangeLog:12 > + > + * src/WebDragData.cpp:
Nit: Please name the test that covers this.
Daniel Cheng
Comment 4
2012-02-21 16:47:10 PST
Committed
r108419
: <
http://trac.webkit.org/changeset/108419
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug